--- a/static/screen.css
+++ b/static/screen.css
@@ -28,6 +28,8 @@ margin-bottom:20px;
 
 #content {margin-left:.5em;}
 #error {color:red; font-size:1.8em;font-weight:bold;}
+#info {color:orange; font-size:1.8em;font-weight:bold;}
+#success {color:green; font-size:1.8em;font-weight:bold;}
 #lip {float:right;}
 #openid_identifier {width:20em;}
 #header {  border: 4px solid #89605a;padding:10px;margin-bottom:20px;}
