--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <!--<b>{{ campaign.beneficiary.nickname }}</b>-->
             <a href="{{ campaign.link }}">{{ campaign.name }}</a>
             {{ campaign.count }}p
-            <a href="/donate?key={{ campaign.key }}">pledge 1p</a>
+            <a href="/donate?link={{ campaign.link }}">pledge 1p</a>
             <br/>
         {% endfor %}
 
@@ -28,8 +28,8 @@
     <div class="column" style="float:right;">
 
         <h4 style="margin-bottom:4px;">Diddy-donate a website</h4>
-        <form action="/donate" method="post">
-          <input type="text" name="url" value="http://" />
+        <form action="/donate" method="get">
+          <input type="text" name="link" value="http://" />
           <input type="submit" value="Donate" />
         </form>
 
