--- a/templates/faq.html
+++ b/templates/faq.html
@@ -10,7 +10,7 @@
 
 <h3>What is this site?</h3>
 <p>
-Diddy-Donation is specifically for really small donations (1p/&pound;0.01) that you give to a webpage if you find it interesting, useful or fun.
+Diddydonation.com is specifically for really small donations (<em>one penny</em>) that you give to a webpage if you find it interesting, useful or fun.
 </p>
 
 
@@ -29,17 +29,26 @@ Diddy-Donation is specifically for really small donations (1p/&pound;0.01) that 
 <h3>Why should I use diddydonation.com?</h3>
 <p>
 <ul>
-<li>Free service - no fees. We don't take a slice of the pie.</li>
-<li>Zero commitment - Donations are <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr> rather than confirmed, i.e you can make a whole bunch of pledges before you need to put your money where your mouth is. Actually, you're never committed to pay, unless you want to.</li>
+<li>Free service - no fees. We don't take a slice of the pie, not even 1p.</li>
+<li>No commitment - Donations are <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr> rather than confirmed, i.e you can pledge a whole bunch of donations before you need to put your money where your mouth is. You're never committed to pay, unless you want to.</li>
+<!--
 <li>We are open and transparent. e.g. see our sourcecode here, and see our balance sheets here</li>
+-->
 <li>You can pledge to any website, you don't have to wait for the website to set up a donations box. Until they have given details on how to get funds to their bank, your dontations can only be <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr>.</li>
 </ul>
 </p>
 
+<h3>Free? I don't believe you</h3>
+<p>
+<ul>
+<li>OK - If you choose Paypal to transfer funds, <strong>you</strong> have to pay Paypal transfer fees. However, we offer payment via BACS which doesn't have any costs associated with it.</li>
+<li>This website was free to build and is free to run, so why do we need to charge? I built it because I wanted to use a similar service but couldn't find anything open enough.</li>
+</ul>
+</p>
 
 <h3>How do I give a larger donation?</h3>
 <p>
-There are plenty of other donations websites:
+There are plenty of other donations websites that accept normal donations:
 <ul>
 <li><a href="http://pledgie.com/">Pledgie</a> - Free except for Paypal fees</li>
 <li><a href="http://www.justgiving.com/">Justgiving</a> - 5% fee</li>
@@ -48,5 +57,23 @@ There are plenty of other donations websites:
 <li><a href="http://twitpay.me/">Twitpay</a></li>
 </ul>
 </p>
+
+<h3>How does payment work?</h3>
+<p>
+There is no commitment for you to make good your pledges. However, if you want to, you can choose two payment methods:
+<ol>
+<li>You can pay the beneficiary directly using Paypal.</li>
+<ul>
+<li><strong>Advantages</strong>: you know your money is going straight to them.</li>
+<li><strong>Disadvantages</strong>: Paypal becomes a middleman and takes their processing fee (approx 20p + between 2-4%). There is also a question of delay. We recommend you don't donate less than &pound;10 which means you will need to donate 1000 times to the same beneficiary. This might take a few years, or it might never happen.</li>
+</ul>
+<li>You can pay via BACS into the diddydonation bank account and we will act as a escrow.</li>
+<ul>
+<li><strong>Advantages</strong>: we can collect and aggregate small amounts from all our users to pay beneficiaries in larger or more frequent sums.</li>
+<li><strong>Disadvantages</strong>: You will be placing trust in us. Paying by BACS is a little inconvient compared to Paypal (and requires online banking).</li>
+</ul>
+</ol>
+</p>
+
 
 {% endblock %}
