--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,11 @@
 
 <h3>1) Install the bookmarklet</h3>
 <p>
-Drag this link to your bookmarks toolbar: <a href="{{bookmarklet}}" title="Diddy Donate" alt="Diddy Donate" style="text-decoration:underline;">Diddy Donate</a>
+Drag this link to your bookmarks toolbar: <a href="{{bookmarklet}}" title="Diddy Donate" alt="Diddy Donate" style="text-decoration:underline;"><img src="/static/bookmarklet.gif" alt="Diddydonate" /></a>
+</p>
+<p>
+<span class="question">What's the point of this bookmarklet thingy?</span><br>
+Using the bookmarklet means you don't need to login to donate: 1 click = 1p.
 </p>
 
 <h3>2) Use the bookmarklet to pledge 1p to any webpage</h3>
@@ -22,8 +26,7 @@ When you visit a website that has something interesting, useful or fun and wish 
 
 <h3>3) Check back often</h3>
 <p>
-To see how many people are diddy-donating at sites around the web, and to see which sites you've donated to.
-Tell your friends to visit <a href="{{request.uri}}">{{request.host}}</a>, and start diddy-donating!
+To see which sites you've pledged to and if any of the websites have received enough pledges to warrent you getting out your wallet (or purse) and ponying up.
 </p>
 
 {% endblock %}
