--- a/templates/home.html
+++ b/templates/home.html
@@ -5,14 +5,14 @@
 {% block content %}
 
 <div id="intro">
-<h3 style="margin-top:0;" class="good">Welcome, {{user.nickname}}</h3>
+<h3 style="margin-top:0;" class="good">Welcome, {{lip.google_user.nickname}}</h3>
 </div>
 
 <h2>How to use this website</h2>
 
 <h3>1) Install the bookmarklet</h3>
 <p>
-Drag this link to your bookmarks toolbar: <a href="{{bookmarklet}}" title="Diddy Donate" alt="Diddy Donate" style="text-decoration:underline;"><img src="/static/bookmarklet.gif" alt="Diddydonate" /></a>
+Drag this link to your bookmarks toolbar: <a href="{{bookmarklet}}" title="Diddy Donate" alt="Diddy Donate" style="text-decoration:underline;"><img src="/static/images/bookmarklet.gif" alt="Diddydonate" /></a>
 </p>
 <p>
 <span class="question">What's the point of this bookmarklet thingy?</span><br>
@@ -21,7 +21,7 @@ Using the bookmarklet means you don't need to login to donate: 1 click = 1p.
 
 <h3>2) Use the bookmarklet to pledge 1p to any webpage</h3>
 <p>
-When you visit a website that has something interesting, useful or fun and wish to show your appreciation, click the <img src="/static/bookmarklet.gif" /> bookmarklet in your toolbar to pledge a 1p tip.
+When you visit a website that has something interesting, useful or fun and wish to show your appreciation, click the <img src="/static/images/bookmarklet.gif" /> bookmarklet in your toolbar to pledge a 1p tip.
 </p>
 
 <h3>3) Check back often</h3>
