--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <title>{% block title %}{% endblock %}</title>
-    <link type="text/css" rel="stylesheet" href="/static/screen.css" />
+    <link rel="stylesheet" href="/static/screen.css" type="text/css" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/diddydonation.js"></script>
     <link rel="shortcut icon" href="/static/favicon.ico">
   </head>
 
@@ -13,14 +15,14 @@
         <div id="lip" style="font-size:smaller;">
             {% if lip %}
             <a href="/home">bookmarklet</a>
-            <a href="/profile?id={{lip.hashedkey}}">profile</a>
+            <a href="/profile">profile</a>
             <a href="{{ logout_url }}">logout</a>
             {% else %}
             <a href="{{ login_url }}">login</a>
             {% endif %}
         </div>
 
-        <a href="/"><img id="logo" src="/static/logo.jpg"  /></a>
+        <a href="/"><img id="logo" src="/static/images/logo.jpg"  /></a>
 
         <div id="moto">
             <h1 style="margin-bottom:0;"><a href="/" style="text-decoration:none;">Diddy Donation</a></h1>
