--- a/templates/faq.html
+++ b/templates/faq.html
@@ -29,7 +29,7 @@ Diddydonation.com is specifically for really small donations (<em>one penny</em>
 <h3>Why should I use diddydonation.com?</h3>
 <p>
 <ul>
-<li>Free service - no fees. We don't take a slice of the pie, not even 1p.</li>
+<li>Free service - no fees. We don't take a slice of the pie. We don't make a profit, not even 1p.</li>
 <li>No commitment - Donations are <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr> rather than confirmed, i.e you can pledge a whole bunch of donations before you need to put your money where your mouth is. You're never committed to pay, unless you want to.</li>
 <!--
 <li>We are open and transparent. e.g. see our sourcecode here, and see our balance sheets here</li>
