small edits and page name changes

--- a/static/screen.css
+++ b/static/screen.css
@@ -57,4 +57,7 @@ a:visited {color:#000;}
 .sexybutton span.addonep      { background-image: url(images/icons/addonep.png); }
 .sexybutton span.subtractonep { background-image: url(images/icons/subtractonep.png); }
 .sexybutton span.delete       { background-image: url(images/icons/cross.png); }
+.sexybutton span.onepenny     { background-image: url(images/icons/onepenny.png); }
+
+
 
