--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}OpenID Please - about{% endblock %}
+{% block title %}Diddydonation - Checkout{% endblock %}
 
 {% block content %}
 
