--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Profile Page{% endblock %}
+{% block title %}Diddydonation - Profile Page{% endblock %}
 
 {% block content %}
 
