--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}OpenID Please - about{% endblock %}
+{% block title %}Diddydonation - About{% endblock %}
 
 {% block content %}
 
 
 <h1>Hello!</h1>
-<p>This website allows you to give a micro donation to any webpage if you find it interesting, useful or fun.</p>
+<p>This website allows you to give a micro donation to any webpage that you find interesting, useful or fun.</p>
 
 
 <h3>About Us</h3>
