--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Diddy Donation - Frequently Asked Questions{% endblock %}
+{% block title %}Diddydonation - Frequently Asked Questions{% endblock %}
 
 {% block content %}
 
@@ -10,18 +10,18 @@
 
 <h3>What is this site?</h3>
 <p>
-Diddydonation.com is specifically for really small donations (<em>one penny</em>) that you give to a webpage if you find it interesting, useful or fun.
+Diddydonation.com is specifically for really small donations (<em>one penny</em>, <img src="static/images/icons/onepenny.png" />) that you give to a webpage if you find it interesting, useful or fun.
 </p>
 
 
 <h3>What is the point of such a small donation?</h3>
 <p>
 <ul>
-<li>A 1p donation is such a small commitment that you don't need to justify it to yourself - just do it!</li>
+<li>We believe it's more likely for 1000 people to donate 1p than it is for 1 person to donate 10 pounds, if the donation system is good enough.</li>
 <li>It's a great way to show your support for a website - Put your money where your mouth is!</li>
-<li>We believe it's more likely for 1000 people to donate 1p than it is for 1 person to donate 10 pounds.</li>
-<li>It's not just about the money - If a author has recieved 500 1p pledges they will be encourgaged to continue what they are doing.</li>
+<li>It's not just about the money - If a author has recieved 500 1p pledges they will be encourgaged to continue what they are doing. Vote of confidence and all that.</li>
 <li>Life is a marathon, not a sprint. Websites can benefit from a tiny trickle of small donations because they all add up.</li>
+<li>A 1p donation is such a small commitment that you don't need to justify it to yourself - just do it!</li>
 </ul>
 </p>
 
@@ -30,50 +30,25 @@ Diddydonation.com is specifically for really small donations (<em>one penny</em>
 <p>
 <ul>
 <li>Free service - no fees. We don't take a slice of the pie. We don't make a profit, not even 1p.</li>
-<li>No commitment - Donations are <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr> rather than confirmed, i.e you can pledge a whole bunch of donations before you need to put your money where your mouth is. You're never committed to pay, unless you want to.</li>
+<li>No commitment - You're never committed to pay, unless you want to. Donations are <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr> rather than confirmed, i.e you can pledge a whole bunch of donations throughout the year then, if the time is right, you can put your money where your mouth is.</li>
 <!--
 <li>We are open and transparent. e.g. see our sourcecode here, and see our balance sheets here</li>
 -->
-<li>You can pledge to any website, you don't have to wait for the website to set up a donations box. Until they have given details on how to get funds to their bank, your dontations can only be <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr>.</li>
+<li>You can pledge to any webpage, you don't have to wait for the webpage to set up a donations box. <em>Note: until they have given details on how to get funds to their bank, your dontations can only be <abbr title="I Owe You (a.k.a. a pledge)">IOUs</abbr></em>.</li>
 </ul>
 </p>
 
-<h3>Free? I don't believe you</h3>
-<p>
-<ul>
-<li>OK - If you choose Paypal to transfer funds, <strong>you</strong> have to pay Paypal transfer fees. However, we offer payment via BACS which doesn't have any costs associated with it.</li>
-<li>This website was free to build and is free to run, so why do we need to charge? I built it because I wanted to use a similar service but couldn't find anything open enough.</li>
-</ul>
-</p>
 
 <h3>How do I give a larger donation?</h3>
 <p>
 There are plenty of other donations websites that accept normal donations:
 <ul>
-<li><a href="http://pledgie.com/">Pledgie</a> - Free except for Paypal fees</li>
-<li><a href="http://www.justgiving.com/">Justgiving</a> - 5% fee</li>
-<li><a href="http://www.everyclick.com/">Everyclick</a> -  4.8% on Credit and Debit card donations.</li>
-<li><a href="http://blog.chipin.com/">Chipin</a></li>
-<li><a href="http://twitpay.me/">Twitpay</a></li>
+<li><a href="http://pledgie.com/">Pledgie</a> - <a href="http://pledgie.com/site/faq">Free</a></li>
+<li><a href="http://blog.chipin.com/">Chipin</a> - <a href="http://chipin.helpserve.com/index.php?_m=knowledgebase&_a=viewarticle&kbarticleid=106">Free</a></li>
+<li><a href="http://www.justgiving.com/">Justgiving</a> - approx 5% fee? <a href="http://www.justgiving.com/info/fees/">info</a></li>
+<li><a href="http://www.everyclick.com/">Everyclick</a> - approx 5% fee? <a href="http://www.everyclick.com/about-everyclick/fees">info</a></li>
+<li><a href="http://twitpay.me/">Twitpay</a>- approx 5 cents? <a href="https://twitpay.me/p/faq">info</a></li>
 </ul>
 </p>
-
-<h3>How does payment work?</h3>
-<p>
-There is no commitment for you to make good your pledges. However, if you want to, you can choose two payment methods:
-<ol>
-<li>You can pay the beneficiary directly using Paypal.</li>
-<ul>
-<li><strong>Advantages</strong>: you know your money is going straight to them.</li>
-<li><strong>Disadvantages</strong>: Paypal becomes a middleman and takes their processing fee (approx 20p + between 2-4%). There is also a question of delay. We recommend you don't donate less than &pound;10 which means you will need to donate 1000 times to the same beneficiary. This might take a few years, or it might never happen.</li>
-</ul>
-<li>You can pay via BACS into the diddydonation bank account and we will act as a escrow.</li>
-<ul>
-<li><strong>Advantages</strong>: we can collect and aggregate small amounts from all our users to pay beneficiaries in larger or more frequent sums.</li>
-<li><strong>Disadvantages</strong>: You will be placing trust in us. Paying by BACS is a little inconvient compared to Paypal (and requires online banking).</li>
-</ul>
-</ol>
-</p>
-
 
 {% endblock %}
