Added agpl license

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -58,7 +58,7 @@ Go to <a href="/checkout">checkout</a>.
 <div style="clear:both;"></div>
 
 {% else %}
-No donations yet. <a href="/home">See how to use this site</a>.
+No donations yet. <a href="/bookmarklet">See how to use this site</a>.
 {% endif %}
 
 
