--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         </span>
     </div>
 
-    <h4 style="margin:50px 0 4px;">Diddydonate a webpage</h4>
+    <h4 style="margin:50px 0 4px;">Diddydonate a webpage now:</h4>
     <form action="/donate" method="get">
       <input type="text" name="link" style="width:200px" value="http://" />
       <button class="sexybutton" type="submit" ><span><span><span class="onepenny">Pledge</span></span></span></button>
