--- a/templates/about.html
+++ b/templates/about.html
@@ -15,8 +15,17 @@
 <h3>Our Source Code</h3>
 <a href="http://code.google.com/appengine"><img style="float:right;border:none;" src="http://code.google.com/appengine/images/appengine-silver-120x30.gif"
 alt="Powered by Google App Engine"/></a>
-<p>The source will be released. Check back here for updates.
+<p>The source code can be found at <a href="http://github.com/tomfotherby/Diddydonation">github</a>.
 </p>
+
+<h3>Attribution</h3>
+
+We'd like to thank:
+
+ <ul>
+ <li><em>Famfamfam</em>, for their <a href="http://www.famfamfam.com/lab/icons/silk/">Silk icon set</a>.</li>
+ <li>Pixelmixer for their <a href="http://pixel-mixer.com">free icons</a>.
+ </ul>
 
 
 
