--- a/templates/base.html
+++ b/templates/base.html
@@ -15,14 +15,14 @@
         <div id="lip" style="font-size:smaller;">
             {% if lip %}
             <a href="/bookmarklet">bookmarklet</a>
-            | <a href="/profile">profile</a>
+            | <a href="/profile">your profile</a>
             | <a href="{{ logout_url }}">logout</a>
             {% else %}
             <a href="{{ login_url }}">login</a>
             {% endif %}
         </div>
 
-        <a href="/"><img id="logo" src="/static/images/logo.jpg"  /></a>
+        <a href="/"><img id="logo" width=103 heigh=104 src="/static/images/logo.jpg"  /></a>
 
         <div id="moto">
             <h1 style="margin-bottom:0;"><a href="/" style="text-decoration:none;">Diddy Donation</a></h1>
