--- a/templates/bookmarklet.html
+++ b/templates/bookmarklet.html
@@ -8,14 +8,15 @@
 <h3 class="good">Welcome, {{lip.google_user.nickname}}</h3>
 </div>
 
-<h2>How to use this website</h2>
+<h1 class="pagetitle"><img src="/static/images/icons/bookmark_48.png" />How to use this website</h1>
+
 
 <h3>1) Install the bookmarklet</h3>
 <p>
-Drag the following thingy to your bookmarks toolbar: <a href="{{bookmarklet}}" title="Diddy Donate" alt="Diddy Donate" style="text-decoration:underline;"><img src="/static/images/bookmarklet.gif" alt="Diddydonate" /></a>
+Drag the following bookmarklet to your bookmarks toolbar: <a href="{{bookmarklet}}" title="Diddy Donate" alt="Diddy Donate" style="text-decoration:underline;"><img src="/static/images/bookmarklet.gif" alt="Diddydonate" /></a>
 </p>
-<p>
-<span class="question">What's the point of this bookmarklet thingy?</span> Using the bookmarklet means you don't need to login to donate.
+<p class="infoBox">
+Using the bookmarklet means you won't need to login to donate.
 </p>
 
 <h3>2) Use the bookmarklet to pledge 1p to any webpage</h3>
